wsgi/openshift/geography/static/sass/_practice.sass
.practice
  .btn
    margin-left: 10px
    margin-bottom: 10px
  h2
    padding-left: 30px
    .label
      font-size: 20px
      line-height: 30px
      padding-bottom: 0
    span
      float: left
      margin-right: 20px

.quesions-progress
  border-radius: 0
  height: 10px
  margin-bottom: 15px

.horizontal
  .map-container
    width: 70%
    float: left
  #container
    width: 30%
    float: right
    .col-sm-7, .col-sm-5
      width: 100%
      padding: 0
      margin-top: 10px
    .label
      white-space: normal
    .btn
      display: block
  .practice
    h2
      padding-left: 10px

